--- a/package.json
+++ b/package.json
@@ -4,14 +4,22 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node --inspect index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js",
+    "start:debug": "node --inspect index.js",
+    "test": "mocha '**/*-spec.js'"
   },
   "author": "ben.bowes@rea-group.com",
   "license": "MIT",
   "dependencies": {
+    "chai": "^4.1.2",
+    "chai-http": "^3.0.0",
+    "eslint": "^4.10.0",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-plugin-import": "^2.8.0",
     "express": "^4.16.2",
     "lodash.get": "^4.4.2",
+    "mocha": "^4.0.1",
+    "nock": "^9.1.0",
     "request": "^2.83.0",
     "request-promise": "^4.2.2"
   }
